--- a/SeekQ.Identity/SeekQ.Identity.csproj
+++ b/SeekQ.Identity/SeekQ.Identity.csproj
@@ -28,6 +28,7 @@
 
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.5" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.5" />
+    <PackageReference Include="Twilio" Version="5.48.0" />
   </ItemGroup>
 
   <ItemGroup>
