--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,13 @@ version: '3.4'
 services:
   seekq.identity:
     image: ${DOCKER_REGISTRY-}seekqidentity
+    ports:
+      - "32700:80"
     build:
       context: .
       dockerfile: SeekQ.Identity/Dockerfile
     environment:
       ASPNETCORE_ConnectionStrings__MSSQL: "Server=mssqlsrv,1433;Database=SeekQ.Identity;User Id=sa;Password=Password123"
-      ASPNETCORE_Twilio__AccountSID: "AC3294fb4da83329aeee0ea4d1d9c3ef6c"
-      ASPNETCORE_Twilio__AuthToken: "324849297df5721f68898d4f0a20e56e"
-      ASPNETCORE_Twilio__VerificationServiceSID: "VAc13eae362778db00bffa7d22f077d8d4"
     depends_on:
       - mssqlsrv
 
