User gender relationship added

--- a/SeekQ.Identity/SeekQ.Identity.csproj
+++ b/SeekQ.Identity/SeekQ.Identity.csproj
@@ -34,4 +34,8 @@
   <ItemGroup>
     <ProjectReference Include="..\..\App.Common\App.Common\App.Common.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Application\Profile\Commands\" />
+  </ItemGroup>
 </Project>
