--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,13 @@ services:
       dockerfile: SeekQ.Identity/Dockerfile
     environment:
       ASPNETCORE_ConnectionStrings__MSSQL: "Server=mssqlsrv,1433;Database=SeekQ.Identity;User Id=sa;Password=Password123"
+
+      #Email settings
+      ASPNETCORE_Email__Server: "192.168.0.100"
+      ASPNETCORE_Email__Port: "25"
+      ASPNETCORE_Email__SenderName: "SeekQ"
+      ASPNETCORE_Email__SenderEmail: "info@seekq.com"
+
     depends_on:
       - mssqlsrv
 
