added profile api

--- a/SeekQ.Identity/appsettings.json
+++ b/SeekQ.Identity/appsettings.json
@@ -3,5 +3,8 @@
     "VerificationServiceSID": "",
     "AuthToken": "",
     "AccountSID": ""
+  },
+  "ConnectionStrings": {
+    "MSSQL": "Server=127.0.0.1,1433;Database=SeekQ.Identity;User Id=sa;Password=Password123"
   }
 }
